Removed the previously deprecated getUri() method from CorpusNode